added OpenGraph and Bootstrap navbar

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body>
 
-    <!-- <div class="nav">
+    <div class="nav">
         <h1 class="header_title">Welcome to my portfolio</h1>
         <a href="index.html">
             <button class="btn_about">ABOUT</button>
@@ -41,7 +41,7 @@
         <a href="contactMe.html">
             <button class="btn_contactMe">CONTACT ME</button>
         </a>
-    </div> -->
+    </div>
 
     <div class="pos-f-t">
         <div class="collapse" id="navbarToggleExternalContent">
