added OpenGraph and Bootstrap navbar

--- a/contactMe.html
+++ b/contactMe.html
@@ -12,6 +12,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+
+    <!-- OpenGraph -->
+    <meta property="og:url" content="https://thebigdiamond.github.io/portfolio/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Contact me!">
+    <meta property="og:description" content="Contact me!">
 </head>
 
 <body>
