--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </a>
     </div>
 
-    <div class="pos-f-t">
+    <!-- <div class="pos-f-t">
         <div class="collapse" id="navbarToggleExternalContent">
             <div class="bg-dark p-4">
                 <h4 class="text-white">Collapsed content</h4>
@@ -57,7 +57,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
         </nav>
-    </div>
+    </div> -->
 
     <div class="cv">
         <div>
