--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="minimum-scale=1">
     <title>My Projects</title>
     <link rel="stylesheet" href="styles/style_projects.css">
 
