FEAT: fixed issue with spacing in the navbar

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
     <div class="nav">
         <h1 class="header_title">Welcome to my portfolio</h1>
+	<div class="header_spacer"></div>
         <a href="index.html">
             <button class="btn_about">ABOUT</button>
         </a>
