added iframe for projects page

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="minimum-scale=1">
     <title>My Projects</title>
     <link rel="stylesheet" href="styles/style_projects.css">
-
+    <link rel="stylesheet" href="styles/GreenEarth/style.css">
+    
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -37,23 +38,15 @@
         </a>
     </div>
 
-    <div class="projects">
-        <div class="greenEarth_project">
-            <h1 class="project_title">GreenEarth:</h1>
-            <p>This project focuses on creating a website for a startup that deals with projects with an environmental
-                impact such as reforestation and ocean cleaning.
-                In the screenshot you can see the main page, composed of a hero section with an image of your choice,
-                all the active projects of the startup and a short description of them
-            </p>
+    <h1 class="project_title">GreenEarth:</h1>
 
-            <img src="assets/img/ss_greenEarth_index.png" alt="pagina principale GreenEarth" class="greenEarth_img">
+    <iframe 
+    title="GreenEarth"
+    src="assets/pages/greenEarth/index.html" 
+    width="1330" height="500">
+    <p>iframes are not supported by this browser.</p>
+  </iframe>
 
-            <p>Integrated into the project, and at the bottom of the page, there are links to the startup's social
-                networks</p>
-
-            <img src="assets/img/ss_greenEarth_socials.png" alt="social GreenEarth" class="greenEarth_socials">
-        </div>
-    </div>
 </body>
 
 </html>
