added border to form in 'contact me' page

--- a/contactMe.html
+++ b/contactMe.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="mt-3">
-        <form method="post">
+        <form method="post" class="form">
             <label for="name">Name:</label><br><br>
             <input class="name" required><br><br>
             <label for="email">Email:</label><br><br>
