fixed mobile layout and fixed scss

--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="minimum-scale=1"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles/style_index.css">
@@ -83,7 +81,7 @@
             </ul>
         </div>
         <div>
-            <h2>Work experiences</h2>
+            <h2>Work experiences:</h2>
             <p>Links Management And Technology SpA</p>
             <p>Role: Backend Apprenticeship</p>
             <p>July 2023- November 2023</p>
