--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="minimum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
     <title>My Projects</title>
     <link rel="stylesheet" href="styles/style_projects.css">
     <link rel="stylesheet" href="styles/GreenEarth/style.css">
