--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <title>My Projects</title>
     <link rel="stylesheet" href="styles/style_projects.css">
     <link rel="stylesheet" href="styles/GreenEarth/style.css">
-    
+
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -39,12 +39,11 @@
 
     <h1 class="project_title">GreenEarth:</h1>
 
-    <iframe 
-    title="GreenEarth"
-    src="assets/pages/greenEarth/index.html" 
-    width="1330" height="800">
-    <p>iframes are not supported by this browser.</p>
-  </iframe>
+    <div class="container">
+        <iframe class="responsive-iframe" title="GreenEarth" src="assets/pages/greenEarth/index.html">
+            <p>iframes are not supported by this browser.</p>
+        </iframe>
+    </div>
 
 </body>
 
