fixed index page scss

--- a/index.html
+++ b/index.html
@@ -62,14 +62,20 @@
 
     <div class="cv">
         <div>
+            <h1>WELCOME</h1>
+        </div>
+    </div>
+
+    <div>
+        <div>
             <h1>Luca Nuzzo</h1>
         </div>
-        <div>
+        <div class="education">
             <h2>Education:</h2>
             <p>I.I.S.S "E. Mattei" - Maglie</p>
             <p>2016-2022</p>
         </div>
-        <div>
+        <div class="skills">
             <h2>Skills:</h2>
             <ul>
                 <li>HTML</li>
@@ -80,7 +86,7 @@
                 <li>Springboot</li>
             </ul>
         </div>
-        <div>
+        <div class="work_experience">
             <h2>Work experiences:</h2>
             <p>Links Management And Technology SpA</p>
             <p>Role: Backend Apprenticeship</p>
