major changes on about page scss

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="nav">
         <h1 class="header_title">Welcome to my portfolio</h1>
-	<div class="header_spacer"></div>
+        <div class="header_spacer"></div>
         <a href="index.html">
             <button class="btn_about">ABOUT</button>
         </a>
@@ -63,34 +63,47 @@
     <div class="cv">
         <div>
             <h1>WELCOME</h1>
+            <p>
+                Hello, my name is Luca Nuzzo and this is my portfolio.<br>
+                Here you will find my skills and previous work experiences, along with some small projects i made.
+            </p>
         </div>
     </div>
 
-    <div>
-        <div>
-            <h1>Luca Nuzzo</h1>
-        </div>
+    <div class="index-page">
+
         <div class="education">
-            <h2>Education:</h2>
-            <p>I.I.S.S "E. Mattei" - Maglie</p>
-            <p>2016-2022</p>
+            <img src="assets/img/graduation_cap.png" class="grad_cap">
+            <div class="text-container">
+                <h2>Education:</h2>
+                <p>I.I.S.S "E. Mattei" - Maglie</p>
+                <p>2016-2022</p>
+            </div>
         </div>
+
         <div class="skills">
-            <h2>Skills:</h2>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>SASS</li>
-                <li>React</li>
-                <li>Java</li>
-                <li>Springboot</li>
-            </ul>
+            <img src="assets/img/skills_img.png" class="skills_img">
+            <div class="text-container">
+                <h2>Skills:</h2>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>SASS</li>
+                    <li>React</li>
+                    <li>Java</li>
+                    <li>Springboot</li>
+                </ul>
+            </div>
         </div>
+
         <div class="work_experience">
-            <h2>Work experiences:</h2>
-            <p>Links Management And Technology SpA</p>
-            <p>Role: Backend Apprenticeship</p>
-            <p>July 2023- November 2023</p>
+            <img src="assets/img/work_experience.png" class="work_experience_img">
+            <div class="text-container">
+                <h2>Work experiences:</h2>
+                <p>Links Management And Technology SpA</p>
+                <p>Role: Backend Apprenticeship</p>
+                <p>July 2023- November 2023</p>
+            </div>
         </div>
     </div>
 
