--- a/contactMe.html
+++ b/contactMe.html
@@ -13,6 +13,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
+    <!-- Bootstrap
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script> -->
+
     <!-- OpenGraph -->
     <meta property="og:url" content="https://thebigdiamond.github.io/portfolio/">
     <meta property="og:type" content="website">
@@ -24,15 +31,17 @@
 
     <div class="nav">
         <h1 class="header_title">Contact me!</h1>
-        <a href="index.html">
-            <button class="btn_about">ABOUT</button>
-        </a>
-        <a href="projects.html">
-            <button class="btn_projects">PROJECTS</button>
-        </a>
-        <a href="contactMe.html">
-            <button class="btn_contactMe">CONTACT ME</button>
-        </a>
+        <div class="nav-buttons">
+            <a href="index.html">
+                <button class="btn_about">ABOUT</button>
+            </a>
+            <a href="projects.html">
+                <button class="btn_projects">PROJECTS</button>
+            </a>
+            <a href="contactMe.html">
+                <button class="btn_contactMe">CONTACT ME</button>
+            </a>
+        </div>
     </div>
 
     <div class="mt-3">
