--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <!-- Bootstrap  
+    <!-- Bootstrap CSS 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script> -->
+    -->
 
     <!-- OpenGraph -->
     <meta property="og:url" content="https://thebigdiamond.github.io/portfolio/">
@@ -52,9 +50,9 @@
             </div>
         </div>
         <nav class="navbar navbar-dark bg-dark">
-            <button class="navbar-toggler" type="button" \toggle="collapse"
-                data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
         </nav>
@@ -75,7 +73,7 @@
         <div class="education">
             <img src="assets/img/graduation_cap.png" class="grad_cap">
             <div class="text-container">
-                <h2>Education:</h2>
+                <h2>Education:</h2><br>
                 <p>I.I.S.S "E. Mattei" - Maglie</p>
                 <p>2016-2022</p>
             </div>
@@ -84,14 +82,11 @@
         <div class="skills">
             <img src="assets/img/skills_img.png" class="skills_img">
             <div class="text-container">
-                <h2>Skills:</h2>
+                <h2>Skills:</h2><br>
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>SASS</li>
-                    <li>React</li>
-                    <li>Java</li>
-                    <li>Springboot</li>
                 </ul>
             </div>
         </div>
@@ -99,13 +94,93 @@
         <div class="work_experience">
             <img src="assets/img/work_experience.png" class="work_experience_img">
             <div class="text-container">
-                <h2>Work experiences:</h2>
+                <h2>Work experiences:</h2><br>
                 <p>Links Management And Technology SpA</p>
                 <p>Role: Backend Apprenticeship</p>
                 <p>July 2023- November 2023</p>
             </div>
         </div>
     </div>
+
+    <!--     bootstrap code WIP -->
+    <!--    
+    <div class="nav navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Welcome to my portfolio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="projects.html">PROJECTS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contactMe.html">CONTACT ME</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="cv text-center my-5">
+        <div>
+            <h1>WELCOME</h1>
+            <p>
+                Hello, my name is Luca Nuzzo and this is my portfolio.<br>
+                Here you will find my skills and previous work experiences, along with some small projects I made.
+            </p>
+        </div>
+    </div>
+
+    <div class="index-page container">
+
+        <div class="education row my-4">
+            <div class="col-md-4">
+                <img src="assets/img/graduation_cap.png" class="grad_cap img-fluid">
+            </div>
+            <div class="col-md-8 text-container">
+                <h2>Education:</h2><br>
+                <p>I.I.S.S "E. Mattei" - Maglie</p>
+                <p>2016-2022</p>
+            </div>
+        </div>
+
+        <div class="skills row my-4">
+            <div class="col-md-4 offset-md-2">
+                <img src="assets/img/skills_img.png" class="skills_img">
+            </div>
+            <div class="col-md-6 text-container">
+                <h2>Skills:</h2><br>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>SASS</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="work_experience row my-4">
+            <div class="col-md-4">
+                <img src="assets/img/work_experience.png" class="work_experience_img img-fluid">
+            </div>
+            <div class="col-md-8 text-container">
+                <h2>Work experiences:</h2><br>
+                <p>Links Management And Technology SpA</p>
+                <p>Role: Backend Apprenticeship</p>
+                <p>July 2023- November 2023</p>
+            </div>
+        </div>
+    </div>
+
+    <-- Bootstrap JS
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script> -->
 
 </body>
 
