--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <!-- Bootstrap CSS 
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    -->
+
 
     <!-- OpenGraph -->
     <meta property="og:url" content="https://thebigdiamond.github.io/portfolio/">
@@ -28,7 +28,7 @@
 
 <body>
 
-    <div class="nav">
+    <!--     <div class="nav">
         <h1 class="header_title">Welcome to my portfolio</h1>
         <div class="header_spacer"></div>
         <a href="index.html">
@@ -42,7 +42,7 @@
         </a>
     </div>
 
-    <!-- <div class="pos-f-t">
+    <div class="pos-f-t">
         <div class="collapse" id="navbarToggleExternalContent">
             <div class="bg-dark p-4">
                 <h4 class="text-white">Collapsed content</h4>
@@ -56,7 +56,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
         </nav>
-    </div> -->
+    </div>
 
     <div class="cv">
         <div>
@@ -100,11 +100,10 @@
                 <p>July 2023- November 2023</p>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!--     bootstrap code WIP -->
-    <!--    
-    <div class="nav navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Welcome to my portfolio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -125,7 +124,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </nav>
 
     <div class="cv text-center my-5">
         <div>
@@ -151,16 +150,16 @@
         </div>
 
         <div class="skills row my-4">
-            <div class="col-md-4 offset-md-2">
-                <img src="assets/img/skills_img.png" class="skills_img">
-            </div>
-            <div class="col-md-6 text-container">
+            <div class="col-md-8 text-container">
                 <h2>Skills:</h2><br>
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>SASS</li>
                 </ul>
+            </div>
+            <div class="col-md-3">
+                <img src="assets/img/skills_img.png" class="skills_img img-fluid">
             </div>
         </div>
 
@@ -177,10 +176,10 @@
         </div>
     </div>
 
-    <-- Bootstrap JS
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script> -->
+        crossorigin="anonymous"></script>
 
 </body>
 
