--- a/contactMe.html
+++ b/contactMe.html
@@ -23,6 +23,14 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Contact me!">
     <meta property="og:description" content="Contact me!">
+
+    <!-- EmailJS SDK -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("YOUR_PUBLIC_KEY"); // Replace with your EmailJS public key
+        })();
+    </script>
 </head>
 
 <body>
@@ -51,21 +59,39 @@
     </nav>
 
     <div class="mt-3">
-        <form method="post" class="form">
+        <form method="post" class="form" id="contact-form">
             <label for="name">Name:</label><br><br>
-            <input class="name" required><br><br>
+            <input class="name" required name="user_name"><br><br>
             <label for="email">Email:</label><br><br>
-            <input class="email" required><br><br>
+            <input class="email" required name="user_email"><br><br>
             <label for="message">Message:</label><br><br>
-            <textarea class="message" required></textarea><br><br>
-            <button class="btn_send">Send</button>
+            <textarea class="message" required name="message"></textarea><br><br>
+            <!-- <button class="btn_send">Send</button> -->
+            <input type="submit" value="Send">
         </form>
     </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
+
+    <!-- EmailJS Form Submission -->
+    <script type="text/javascript">
+        window.onload = function () {
+            document.getElementById('contact-form').addEventListener('submit', function (event) {
+                event.preventDefault();
+                emailjs.sendForm('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', this)
+                    .then(function () {
+                        console.log('SUCCESS!');
+                        alert('Your message has been sent successfully!');
+                    }, function (error) {
+                        console.log('FAILED...', error);
+                        alert('Failed to send your message. Please try again later.');
+                    });
+            });
+        }
+    </script>
 
 </body>
 
