fix to layout problems

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
     <title>My Projects</title>
     <link rel="stylesheet" href="styles/style_projects.css">
-    <link rel="stylesheet" href="styles/GreenEarth/style.css">
+    <link type="text/css" href="styles/GreenEarth/style.css">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
