--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="shortcut icon" href="#">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -67,7 +68,7 @@
             <div class="col-md-4">
                 <img src="assets/img/graduation_cap.png" class="grad_cap img-fluid">
             </div>
-            <div class="col-md-8 text-container">
+            <div class="col-md-8 text-container_ed">
                 <h2>Education:</h2><br>
                 <p>I.I.S.S "E. Mattei" - Maglie</p>
                 <p>2016-2022</p>
@@ -75,24 +76,23 @@
         </div>
 
         <div class="skills row my-4">
-            <div class="col-md-8 text-container">
+            <div class="col-md-11">
+                <img src="assets/img/skills_img.png" class="skills_img img-fluid">
+            </div>
+            <div class="col-md-8 text-container_skills">
                 <h2>Skills:</h2><br>
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>SASS</li>
                 </ul>
-            </div>
-            <div class="col-md-3">
-                <img src="assets/img/skills_img.png" class="skills_img img-fluid">
-            </div>
         </div>
 
         <div class="work_experience row my-4">
             <div class="col-md-4">
                 <img src="assets/img/work_experience.png" class="work_experience_img img-fluid">
             </div>
-            <div class="col-md-8 text-container">
+            <div class="col-md-8 text-container_work">
                 <h2>Work experiences:</h2><br>
                 <p>Links Management And Technology SpA</p>
                 <p>Role: Backend Apprenticeship</p>
