--- a/contactMe.html
+++ b/contactMe.html
@@ -17,20 +17,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-
     <!-- OpenGraph -->
     <meta property="og:url" content="https://thebigdiamond.github.io/portfolio/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Contact me!">
     <meta property="og:description" content="Contact me!">
-
-    <!-- EmailJS SDK -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function () {
-            emailjs.init("YOUR_PUBLIC_KEY"); // Replace with your EmailJS public key
-        })();
-    </script>
 </head>
 
 <body>
@@ -59,14 +50,14 @@
     </nav>
 
     <div class="mt-3">
-        <form method="post" class="form" id="contact-form">
+        <form method="post" class="form">
             <label for="name">Name:</label><br><br>
-            <input class="name" required name="user_name"><br><br>
+            <input id="name" required name="name"><br><br>
             <label for="email">Email:</label><br><br>
-            <input class="email" required name="user_email"><br><br>
+            <input id="email" required name="email"><br><br>
             <label for="message">Message:</label><br><br>
-            <textarea class="message" required name="message"></textarea><br><br>
-            <input type="submit" value="Send">
+            <textarea id="message" required name="message"></textarea><br><br>
+            <input type="submit" value="Send" onclick="sendMail()">
         </form>
     </div>
 
@@ -75,23 +66,17 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
 
-    <!-- EmailJS Form Submission -->
-    <script type="text/javascript">
-        window.onload = function () {
-            document.getElementById('contact-form').addEventListener('submit', function (event) {
-                event.preventDefault();
-                emailjs.sendForm('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', this)
-                    .then(function () {
-                        console.log('SUCCESS!');
-                        alert('Your message has been sent successfully!');
-                    }, function (error) {
-                        console.log('FAILED...', error);
-                        alert('Failed to send your message. Please try again later.');
-                    });
-            });
-        }
+    <!-- EmailJS -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
     </script>
-
+    <script type="text/javascript">
+        (function () {
+            emailjs.init({
+                publicKey: "Ek6K063VFfOzWGgRH",
+            });
+        })();
+    </script>
+    <script src="EmailJS.js"></script>
 </body>
 
 </html>
