added calculator and counter project to projects page

--- a/projects.html
+++ b/projects.html
@@ -52,10 +52,18 @@
         </div>
     </nav>
 
-    <h1 class="project_title">GreenEarth:</h1>
+    <h1 class="project_title">Javascript Calculator:</h1>
 
     <div class="container">
-        <iframe class="responsive-iframe" title="GreenEarth" src="assets/pages/greenEarth/index.html">
+        <iframe class="responsive-iframe" title="calculator" src="assets/pages/calculator/index.html">
+            <p>iframes are not supported by this browser.</p>
+        </iframe>
+    </div>
+
+    <h1 class="project_title">Javascript Counter:</h1>
+
+    <div class="container">
+        <iframe class="responsive-iframe" title="counter" src="assets/pages/counter/index.html">
             <p>iframes are not supported by this browser.</p>
         </iframe>
     </div>
