--- a/contactMe.html
+++ b/contactMe.html
@@ -50,7 +50,10 @@
     </nav>
 
     <div class="mt-3">
-        <form method="post" class="form">
+        <form action="https://api.web3forms.com/submit" method="POST" class="form">
+
+            <input type="hidden" name="access_key" value="9b0e5a71-134b-480f-b1fc-74435b810d3d">
+
             <label for="name">Name:</label><br><br>
             <input id="name" required name="name"><br><br>
             <label for="email">Email:</label><br><br>
@@ -65,18 +68,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
-
-    <!-- EmailJS -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    </script>
-    <script type="text/javascript">
-        (function () {
-            emailjs.init({
-                publicKey: "Ek6K063VFfOzWGgRH",
-            });
-        })();
-    </script>
-    <script src="EmailJS.js"></script>
 </body>
 
 </html>
