added a new project

--- a/projects.html
+++ b/projects.html
@@ -55,11 +55,19 @@
     <h1 class="project_title">Javascript Calculator:</h1>
 
     <div class="container">
-        <iframe class="responsive-iframe" title="calculator" src="assets/pages/calculator/index.html">
+        <iframe class="responsive-iframe" title="javascript calculator" src="assets/pages/calculator/index.html">
             <p>iframes are not supported by this browser.</p>
         </iframe>
     </div>
 
+    <h1 class="project_title">Hacker News:</h1>
+
+    <div class="container">
+        <iframe class="responsive-iframe" title="hacker news" src="https://hacker-news-s2i.netlify.app/">
+            <p>iframes are not supported by this browser.</p>
+        </iframe>
+    </div>
+    
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
